修正代码错误